# toy-project

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  directory_structure.txt  ls_man.txt  pyproject.toml
docs/: build_date_spine_contract.yml
src/etl/: etl_land_fred.contract.yaml
src/spine/: __init__.py  date_spine.ipynb  date_spine.py  env_vars.standard.yaml
standars/: common_policies.standard.yaml  etl_landing.stantard.yaml  warehouse_modeling.standard.yaml
