[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spine"                    # import name
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]                   # look for packages under src/

